--- a/styles/style.css
+++ b/styles/style.css
@@ -9,34 +9,34 @@
     font-variation-settings:
         "slnt" 0;
     background-color: black;
-    max-width: 1140px;
-    margin: 0 auto;
-    background-image: linear-gradient(180deg,rgba(113, 113, 113, 0.293) 0%,
-    rgb(0, 0, 0) 100%);
-   
     background-repeat: no-repeat;
-    
+
 }
 
-#shape{
- font-family: "Allura", cursive;
- font-size: 7rem;
- font-weight: 300;
+#shape {
+    font-family: "Allura", cursive;
+    font-size: 7rem;
+    font-weight: 300;
 }
 
 * {
     margin: 0;
     padding: 0;
 }
-
-/* main {
-    max-width: 1440px;
+#sec-1 , #sec-2{
+    max-width: 1140px;
     margin: 0 auto;
+    margin-top: 100px ;
+}
+/* main {
+    max-width: 1140px;
+    margin: 0 auto;
+    
   } */
 
-main > section {
+/* main > section {
     margin-top: 100px;
-}
+} */
 
 /* Shared style */
 .display-flex {
@@ -59,6 +59,7 @@ main > section {
     border-radius: 42px;
     gap: 8px;
 }
+
 .btn-primary1 {
     display: flex;
     justify-content: center;
@@ -75,13 +76,16 @@ main > section {
     border-radius: 42px;
     gap: 8px;
 }
+header{
+    background: linear-gradient(rgba(17, 17, 17,1), rgba(119, 119, 119,0));
+}
 
 /* nav bar style */
 .navbar {
+    max-width: 1140px;
     justify-content: space-between;
     align-items: center;
     padding: 50px 0;
-    /* max-width: 1440px; */
     margin: 0 auto;
 }
 
@@ -122,35 +126,43 @@ main > section {
     border-radius: 46px;
     color: white;
 }
+
 /* banner style */
-.banner-content h1{
+.banner-content h1 {
     color: white;
     font-size: 5.4rem;
     line-height: 6rem;
     margin-bottom: 28px;
     font-weight: 800;
 }
-.banner-content p{
+
+.banner-content p {
     color: rgba(255, 255, 255, 0.5);
     font-size: 1rem;
     line-height: 1.5rem;
     margin-bottom: 25px;
 }
-.banner-btn{
+
+.banner-btn {
     display: flex;
     gap: 14px;
 }
-.banner{
+
+.banner {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    max-width: 1140px;
+    margin: 0 auto;
 }
-#vdo1{
+
+
+#vdo1 {
     background-color: rgba(48, 48, 48, 0.54);
     border: 1px solid rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(20px);
     width: 206px;
-    padding:24px 0;
+    padding: 24px 0;
     border-radius: 12px;
     margin-top: -160px;
     margin-left: -120px;
@@ -160,37 +172,42 @@ main > section {
     gap: 20px;
     position: absolute;
 }
-#vdo{
-    
+
+#vdo {
+
     display: flex;
     justify-content: center;
     align-items: start;
     flex-direction: column;
     /* position: absolute; */
-    
+
 }
-#vdo #no{
+
+#vdo #no {
     font-size: 1.5rem;
     font-weight: 700;
     color: white;
     margin-bottom: 5px;
 }
+
 #vdo #video {
     font-size: 1rem;
     color: rgba(239, 237, 232, 0.65);
 }
-#icon{
+
+#icon {
     color: white;
     padding: 15px;
     border-radius: 100%;
     background-color: rgba(230, 83, 60, 1);
 }
-#vdo2{
+
+#vdo2 {
     background-color: rgba(48, 48, 48, 0.54);
     border: 1px solid rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(20px);
     width: 180px;
-    padding:24px 0;
+    padding: 24px 0;
     border-radius: 12px;
     margin-top: -470px;
     margin-left: 230px;
@@ -201,65 +218,106 @@ main > section {
     position: absolute;
     padding-left: 24px;
 }
-#vdo3 #no{
+
+#vdo3 #no {
     font-size: 2.5rem;
     font-weight: 700;
     color: white;
     margin-bottom: 5px;
 }
+
 #vdo3 #video {
     font-size: 1rem;
     color: rgba(239, 237, 232, 0.65);
 }
+
 /* change your habits section style */
-.habit-content{
+.habit-content {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
-.habit-content h2{
+
+.habit-content h2 {
     font-size: 3rem;
     font-weight: 900;
     color: white;
     margin-bottom: 14px;
 }
-.habit-content p{
+
+.habit-content p {
     font-size: 0.875rem;
     line-height: 24px;
     color: rgba(255, 255, 255, 0.5);
     margin-bottom: 14px;
     text-align: center;
 }
-.main-habit-img-content{
+
+.main-habit-img-content {
     display: grid;
-    grid-template-columns: repeat(4,1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 40px;
     margin-top: 58px;
 }
 
-.habit-img-content{
+.habit-img-content {
     align-items: center;
     justify-content: center;
     display: flex;
     flex-direction: column;
 
 }
-.habit-img-content img{
+
+.habit-img-content img {
     border: 4px solid rgba(255, 255, 255, 0.1);
     border-radius: 100%;
 }
 
-.habit-img-content h4{
+.habit-img-content h4 {
     font-size: 1.125rem;
     font-weight: 700;
     color: white;
     margin-top: 30px;
     margin-bottom: 6px;
 }
-.habit-img-content p{
+
+.habit-img-content p {
     font-size: 0.875rem;
     line-height: 18px;
     color: rgba(255, 255, 255, 0.5);
     text-align: center;
+}
+/* run an extra mile easily section style */
+.run{
+    margin-top: 100px;
+    display: flex;
+    justify-content: space-between;
+    padding: 40px;
+    gap: 165px;
+    border-radius: 18px;
+    background-color: rgba(34, 34, 34, 1);
+}
+.run-content{
+    display: flex;
+    justify-content: center;
+    /* align-items: center; */
+    flex-direction: column;
+}
+.run-content h2{
+    font-size: 3rem;
+    font-weight: 900;
+    color: white;
+    margin-bottom: 14px;
+}
+.run-content p{
+    font-size: 0.875rem;
+    line-height: 24px;
+    color: rgba(255, 255, 255, 0.5);
+    margin-bottom: 34px;
+}
+.run-img img{
+    width: 366px;
+    height: 312px;
+    border-radius: 18px;
 }
