--- a/styles/style.css
+++ b/styles/style.css
@@ -156,7 +156,6 @@ header{
     margin: 0 auto;
 }
 
-
 #vdo1 {
     background-color: rgba(48, 48, 48, 0.54);
     border: 1px solid rgba(255, 255, 255, 0.1);
@@ -164,15 +163,33 @@ header{
     width: 206px;
     padding: 24px 0;
     border-radius: 12px;
-    margin-top: -160px;
-    margin-left: -120px;
+    /* margin-top: -160px; */
+    /* margin-left: -120px; */
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 20px;
     position: absolute;
+    margin-top: -163px;
+    margin-left: -120px;
 }
-
+#vdo2 {
+    background-color: rgba(48, 48, 48, 0.54);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(20px);
+    width: 180px;
+    padding: 24px 0;
+    border-radius: 12px;
+    margin-top: -470px;
+    margin-left: 230px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    gap: 20px;
+    position: absolute;
+    padding-left: 24px;
+    margin-bottom: 100px;
+}
 #vdo {
 
     display: flex;
@@ -202,22 +219,7 @@ header{
     background-color: rgba(230, 83, 60, 1);
 }
 
-#vdo2 {
-    background-color: rgba(48, 48, 48, 0.54);
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    backdrop-filter: blur(20px);
-    width: 180px;
-    padding: 24px 0;
-    border-radius: 12px;
-    margin-top: -470px;
-    margin-left: 230px;
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    gap: 20px;
-    position: absolute;
-    padding-left: 24px;
-}
+
 
 #vdo3 #no {
     font-size: 2.5rem;
