--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@
     font-style: normal;
     font-variation-settings:
         "slnt" 0;
-    background-color: black;
+    /* background-color: black; */
     background-repeat: no-repeat;
 
 }
