--- a/styles/style.css
+++ b/styles/style.css
@@ -78,6 +78,7 @@
 }
 header{
     background: linear-gradient(rgba(17, 17, 17,1), rgba(119, 119, 119,0));
+    background-color: black;
 }
 
 /* nav bar style */
