--- a/styles/style.css
+++ b/styles/style.css
@@ -77,7 +77,7 @@
     gap: 8px;
 }
 header{
-    background: linear-gradient(rgba(17, 17, 17,1), rgba(119, 119, 119,0));
+    background: linear-gradient(rgba(17, 17, 17,1) 0%, rgba(119, 119, 119,0)100%);
     background-color: black;
 }
 
