--- a/styles/style.css
+++ b/styles/style.css
@@ -23,11 +23,16 @@
     margin: 0;
     padding: 0;
 }
-#sec-1 , #sec-2{
+#sec-1 {
     max-width: 1140px;
     margin: 0 auto;
-    margin-top: 100px ;
+    padding-top: 100px ;
 }
+#sec-2{
+    max-width: 1140px;
+    margin: 0 auto;  
+}
+
 /* main {
     max-width: 1140px;
     margin: 0 auto;
@@ -77,10 +82,12 @@
     gap: 8px;
 }
 header{
-    background: linear-gradient(rgba(17, 17, 17,1) 0%, rgba(119, 119, 119,0)100%);
+    background: linear-gradient(180deg,rgba(17, 17, 17), rgba(119, 119, 119, 0.015));
     background-color: black;
 }
-
+main{
+    background-color: black;
+}
 /* nav bar style */
 .navbar {
     max-width: 1140px;
@@ -156,17 +163,16 @@ header{
     max-width: 1140px;
     margin: 0 auto;
 }
-.banner-img{
+/* .banner-img{
     background-image: url("../images/Images\ 2.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     height: 580px;
     width: 350px;
-}
-.banner-img h1{
-    color: white;
-}
+} */
+
+
 #vdo1 {
     background-color: rgba(48, 48, 48, 0.54);
     border: 1px solid rgba(255, 255, 255, 0.1);
@@ -174,8 +180,6 @@ header{
     width: 206px;
     padding: 24px 0;
     border-radius: 12px;
-    /* margin-top: -160px; */
-    /* margin-left: -120px; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -199,7 +203,6 @@ header{
     gap: 20px;
     position: absolute;
     padding-left: 24px;
-    margin-bottom: 100px;
 }
 #vdo {
 
