--- a/styles/style.css
+++ b/styles/style.css
@@ -378,9 +378,9 @@ main{
         justify-content: space-between;
         background: linear-gradient(180deg, rgba(17, 17, 17, 1) 100%, rgba(119, 119, 119, 0) 0%);
      }
-     main{
+     /* main{
         padding: 0 20px;
-     }
+     } */
      .banner-btn{
         justify-content: space-between;
         margin-bottom: 48px;
@@ -428,7 +428,7 @@ main{
     .run{
         flex-direction: column;
         gap: 31px;
-
+        margin: 60px 20px;
     }
     #sec-1{
         margin-top: 0;
