--- a/styles/style.css
+++ b/styles/style.css
@@ -405,8 +405,8 @@ main{
     }
     .banner{
         flex-direction: column;
-        padding: 0 20px;
-        /* margin: 0 20px; */
+        /* padding: 0 20px; */
+        margin: 0 20px;
     }
     #vdo2{
         position: absolute;
