--- a/styles/style.css
+++ b/styles/style.css
@@ -382,10 +382,6 @@ main{
         justify-content: space-between;
         background: linear-gradient(180deg, rgba(17, 17, 17, 1) 100%, rgba(119, 119, 119, 0) 0%);
      }
-     main{
-        padding: 0 20px;
-
-     }
      .banner-btn{
         justify-content: space-between;
         margin-bottom: 48px;
@@ -413,9 +409,9 @@ main{
         /* padding: 0 20px; */
         margin: 0 20px;
     }
-    .banner-content, .habit-content{
-        padding: 0 20px;
-    }
+    /* .banner-content{
+        padding: 0 200px;
+    } */
     #vdo2{
         position: absolute;
         margin-top: -570px;
