--- a/styles/style.css
+++ b/styles/style.css
@@ -406,8 +406,9 @@ main{
     }
     .banner{
         flex-direction: column;
+        border: 1px solid white;
         /* padding: 0 20px; */
-        /* margin: 0 20px; */
+        margin: 0 20px;
     }
     /* .banner-content{
         padding: 0 200px;
