--- a/styles/style.css
+++ b/styles/style.css
@@ -423,7 +423,7 @@ table, th, td{
     grid-template-columns: 2fr;
 }
 input,select,option{
-    padding:  13px 20px 13px 20px;
+    padding:  13px 0 13px 20px;
     background-color: rgba(255, 255, 255, 0.1);
     border: none;
     border-radius: 8px;
@@ -599,11 +599,11 @@ input::placeholder{
         grid-template-columns: repeat(1,1fr);
     }
     .icon1{
-        margin-left: 0;
-        margin: 0;
+        margin-left: 355px;
+        margin-top: 13px;
     }
     #field-1{
         display: grid;
-        grid-template-columns: 0.8fr 0.8fr;
+        grid-template-columns: 1fr 1fr;
     }
 }
