--- a/styles/style.css
+++ b/styles/style.css
@@ -433,19 +433,6 @@ input,select,option{
 input::placeholder{
     color: rgba(255, 255, 255, 0.6);
 }
-
-.select-ang{
-    appearance: none;
-}
-.icon1{
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 620px;
-    margin-top: 13px;
-    color: rgba(255, 255, 255, 0.6);        
-}
 .btn-cal{
     margin-top: 34px;
 }
@@ -598,12 +585,9 @@ input::placeholder{
         display: grid;
         grid-template-columns: repeat(1,1fr);
     }
-    .icon1{
-        margin-left: 355px;
-        margin-top: 13px;
-    }
+    
     #field-1{
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: .5fr .5fr;
     }
 }
