--- a/styles/style.css
+++ b/styles/style.css
@@ -496,20 +496,53 @@ input::placeholder{
 /* Footer section style */
 #footer{
     background-color: rgba(34, 34, 34, 1);
+    
 }
-
 .footer-container{
     max-width: 1140px;
     margin: 0 auto;
-    
 }
-
-
-
-
-
-
-
+.footer-container-content{ 
+    padding: 60px 0;
+    display: flex;
+    justify-content: space-between;
+}
+.col-1 h1{
+    font-size: 4.375rem;
+    font-weight: 800;
+    color: rgba(230, 83, 60, 1);
+    margin-bottom: 20px;
+}
+.col-1 p{
+    font-size: .875rem;
+    line-height: 24px;
+    color: rgba(255, 255, 255, 0.5);
+}
+.col-2 h3{
+    font-size: 2rem;
+    font-weight: 700;
+    color: white;
+    margin-bottom: 30px;
+}
+.col-2 h5{
+    font-size: 1.4375rem;
+    font-weight: 400;
+    color: rgba(255, 255, 255, 0.5);
+    margin-bottom: 20px;
+}
+hr{
+    max-width: 100%;
+    border: 2px solid rgba(255, 255, 255, 0.1);
+}
+.all-right{
+    padding: 35px 0;
+}
+.all-right p{
+    font-size: 1.25rem;
+    font-weight: 400;
+    color: rgba(255, 255, 255, 0.5);
+    text-align: center;
+}
 
 /* media query */
 @media screen and (max-width: 576px) {
@@ -679,5 +712,12 @@ input::placeholder{
     }
     .team-card img{
         width: 100%;
+    }
+    .footer-container{
+        padding: 0 20px;
+    }
+    .footer-container-content{
+        display: grid;
+        gap: 25px;
     }
 }
