updated in run an extra mile section

--- a/styles/style.css
+++ b/styles/style.css
@@ -364,6 +364,8 @@ main {
     width: 366px;
     height: 316px;
     border-radius: 18px;
+    object-fit: none;
+    object-position: 68% 28%;
 }
 /* Package section style */
 .packages-content h2{
