--- a/styles/style.css
+++ b/styles/style.css
@@ -92,8 +92,8 @@
 }
 
 header {
-    background: linear-gradient(180deg, rgba(17, 17, 17), rgba(119, 119, 119, 0.015));
-    background-color: black;
+    /* background-color: black; */
+    background:linear-gradient(#141414, #202020, #000000);
 }
 
 main {
@@ -357,15 +357,15 @@ main {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    /* transform: scale(-1.5); */
+    
 }
 
 .run-img img {
-    width: 366px;
-    height: 316px;
+    width: 400px;
+    height: 400px;
     border-radius: 18px;
     object-fit: none;
-    object-position: 68% 28%;
+    object-position: 68% 30%;
 }
 /* Package section style */
 .packages-content h2{
@@ -768,7 +768,8 @@ hr{
 
     .run-img img {
         width: 100%;
-        height: 170px;
+        height: 300px;
+        
     }
 
     .run {
@@ -846,5 +847,59 @@ hr{
         padding: 40px 20px;
         border-radius: 18px;
         border: 1px solid rgba(255, 255, 255, 0.5);
+    }
+}
+
+/* medium size device */
+@media screen and (min-width: 576px) and (max-width: 992px) {
+    .navbar{
+        margin: 0 20px;
+    }
+    .banner{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+       
+    }
+    .banner-content, .banner-img{
+        max-width: 992px;
+        margin: 0 auto;
+    }
+    .habit-content h2, p{
+        text-align: center;
+    }
+    .main-habit-img-content{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        margin-top: 50px;
+    }
+    .run-content h2, p{
+        text-align: left;
+    }
+    .run{
+        margin: 80px 20px 0 20px;
+        gap: 20px;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .run-img img{
+        width: 100%;
+        
+    }
+    .Package-container{
+        margin: 0 20px;
+    }
+    .bmi{
+        margin: 0 20px;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .team-img-container{
+        margin: 80px 20px 0 20px;
+    }
+    .footer-container-content{
+        margin: 0 20px;
+        gap: 50px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr; 
     }
 }
